1.0.2.0
-------
- Remove old tax rate priority

1.0.1.0
-------
- Show synchronization URL in backend

1.0.0.0
-------
- First public release