@@ -5,12 +5,17 @@
             "push" : true,
             "delete" : true
         },
-        "Product" : {
+        "CategoryI18n" : {
             "pull" : true,
             "push" : true,
             "delete" : true
         },
         "CrossSellingGroup" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CrossSellingGroupI18n" : {
             "pull" : true,
             "push" : false,
             "delete" : false
@@ -30,7 +35,37 @@
             "push" : false,
             "delete" : false
         },
+        "CustomerGroupI18n" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
         "CustomerOrder" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CustomerOrderBillingAddress" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CustomerOrderItem" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CustomerOrderItemVariation" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CustomerOrderPaymentInfo" : {
+            "pull" : true,
+            "push" : false,
+            "delete" : false
+        },
+        "CustomerOrderShippingAddress" : {
             "pull" : true,
             "push" : false,
             "delete" : false
@@ -45,9 +80,74 @@
             "push" : false,
             "delete" : false
         },
+        "Product" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "Product2Category" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductI18n" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductPrice" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductPriceItem" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductStockLevel" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductPriceItem" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductVarCombination" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductVariation" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductVariationI18n" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductVariationValue" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
+        "ProductVariationValueI18n" : {
+            "pull" : true,
+            "push" : true,
+            "delete" : true
+        },
         "StatusChange" : {
             "pull" : false,
             "push" : true,
+            "delete" : false
+        },
+        "TaxRate" : {
+            "pull" : true,
+            "push" : false,
             "delete" : false
         }
     },
